--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -1,5 +1,12 @@
+// === 字形 相關 ===
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap');
+
+
+
 // === bootstrap 相關 ===
 @import 'bootstrap/scss/functions';
 @import './variables';
 @import 'bootstrap/scss/bootstrap.scss';
 @import'./utilities';
+
+// === base 相關 ===
